test/tests/stages/6_statements_and_conditional_expressions/valid/ternary.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(0)
  ;
  return
  identifier(a)
  >
  -
  const int(1)
  ?
  const int(4)
  :
  const int(5)
  ;
  }
