test/tests/stages/6_statements_and_conditional_expressions/invalid_semantics/undeclared_var_in_ternary.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[21]:
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(a)
  >
  const int(0)
  ?
  const int(1)
  :
  const int(2)
  ;
  int
  identifier(a)
  =
  const int(5)
  ;
  }
